--- a/gb/23/12/19/n14139584.md
+++ b/gb/23/12/19/n14139584.md
@@ -1,20 +1,20 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>【健康养成记】打造紧致脸蛋消水肿 两排毒妙招</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>【健康养成记】两妙招排毒消水肿 打造紧致脸蛋</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/12/id14139595-19973f3c1cbb3f71affd6d9fa55a603e-600x400.jpg" />///image2=```diff
 - 紧致脸蛋的第一步，就是要先帮自己把工作压力及毒素排掉，皮肤才能恢复弹性！（健康养成记／大纪元）
 ```
 <h6>紧致脸蛋的第一步，就是要先帮自己把工作压力及毒素排掉，皮肤才能恢复弹性！（健康养成记／大纪元）
 </h6>
 <hr>
-<p>随着黄历新年的邻近，即将进入充满佳节气氛，帮自己打造一个紧致小脸，为各式派对做好万全准备吧！<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%B4%A7%E8%87%B4%E8%84%B8%E8%9B%8B.md#1">紧致脸蛋</a>的第一步，就是要先帮自己把一年累积的工作压力及毒素排掉，才能让皮肤恢复弹性！我跟“健康1+1”的JOJO一同分享，如何快速消除脸部水肿，拉提脸蛋的两大绝招！</p>
-<p>上镜脸（Camera face）永远为网红加分，即便我跟JOJO都尽量保持规律的生活，加上我几乎天天在运动，透过汗水也能排除不少体内毒素，却免不了还是会遇到录影前的水肿脸。特别是在欢庆节日时，如何能在前一天大餐后，隔天仍能保持美美的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%B4%A7%E8%87%B4%E8%84%B8%E8%9B%8B.md#1">紧致脸蛋</a>呢？</p>
+<p>随着黄历新年的临近，即将进入充满佳节气氛，帮自己打造一个紧致小脸，为各式派对做好万全准备吧！紧致脸蛋的第一步，就是要先帮自己把一年累积的工作压力及毒素排掉，才能让皮肤恢复弹性！我跟“健康1+1”的JOJO一同分享，如何快速消除脸部水肿，拉提脸蛋的两大绝招！</p>
+<p>上镜脸（Camera face）永远为网红加分，即便我跟JOJO都尽量保持规律的生活，加上我几乎天天在运动，透过汗水也能排除不少体内毒素，却免不了还是会遇到录影前的水肿脸。特别是在欢庆节日时，如何能在前一天大餐后，隔天仍能保持美美的紧致脸蛋呢？</p>
 <p>脸部的水肿跟身体是否累积毒素息息相关，日常生活的脏空气、吃进身体的食物，甚至情绪跟压力，都是造成毒素累积的因素，当毒素排不出去，在体内累积时，呈现在脸部就是脸水肿、气色不佳的症状，严重者甚至长疮、长痘。</p>
-<p>人体许多器官都有<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8E%92%E6%AF%92.md#1">排毒</a>作用，包括肝、肾、肺、皮肤、大肠，还有淋巴。其中，肝脏是人体最大也最主要的解毒器官，它通过肝细胞中的酵素，分解内生性或外生性有毒物质，包括药物、激素和微生物等的有毒代谢物；皮肤则是人体最大的排毒器官，皮肤上的汗腺和皮脂腺，可以通过出汗等方式，排出多余的盐分、尿酸和尿毒等。</p>
-<p>而淋巴系统遍布人的全身，具有免疫杀灭功能，它通过淋巴液中的T细胞、巨噬细胞等杀灭进入人体的“异物”，它又是肝脏、肺脏、肾脏和皮肤等<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8E%92%E6%AF%92.md#1">排毒</a>器官的毒素“转运站”。</p>
-<p><em><span style="color: #800000;">【<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%81%A5%E5%BA%B7%E5%85%BB%E6%88%90%E8%AE%B0.md#1">健康养成记</a>】拥有不水肿的紧致小脸，先从排毒开始，健康1+1的Jojo分享韩国最新皮肤<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B6%88%E6%B0%B4%E8%82%BF.md#1">消水肿</a>排毒保养和头皮按摩法，仅三分钟看出脸部拉提成效！</span></em></p>
-<p><a title="YouTube video player" src=""></a><a href="https://d2torrlf4djx10.cloudfront.net/J6iCT6Res"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/wPX06xKmjwY?si=L6rX99tnsuC1L_kF" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
+<p>人体许多器官都有排毒作用，包括肝、肾、肺、皮肤、大肠，还有淋巴。其中，肝脏是人体最大也最主要的解毒器官，它通过肝细胞中的酵素，分解内生性或外生性有毒物质，包括药物、激素和微生物等的有毒代谢物；皮肤则是人体最大的排毒器官，皮肤上的汗腺和皮脂腺，可以通过出汗等方式，排出多余的盐分、尿酸和尿毒等。</p>
+<p>而淋巴系统遍布人的全身，具有免疫杀灭功能，它通过淋巴液中的T细胞、巨噬细胞等杀灭进入人体的“异物”，它又是肝脏、肺脏、肾脏和皮肤等排毒器官的毒素“转运站”。</p>
+<p><em><span style="color: #800000;">【健康养成记】拥有不水肿的紧致小脸，先从排毒开始，健康1+1的Jojo分享韩国最新皮肤消水肿排毒保养和头皮按摩法，仅三分钟看出脸部拉提成效！</span></em></p>
+<p><a loading="lazy" title="YouTube video player" src=""></a><a href="https://d17bhfsmf5ovpz.cloudfront.net/T4uCT6Red"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/wPX06xKmjwY?si=L6rX99tnsuC1L_kF" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
 <h2><span style="color: #188638;">第一招 头皮排毒</span></h2>
 <p>很多人想到脸部水肿，直觉就是要透过脸部的血液循环来改善，我更推荐从头皮按摩来改善血液循环，瘦脸的效果更立即见效，原因有三个：</p>
 <p><strong>1. 恢复头皮弹性：</strong>头皮跟脸是同一张皮，当人压力大时，头皮会紧绷，连带着脸也跟着紧绷没有弹性，如果头皮血液循环好，恢复弹性，连带着脸皮也会跟着上提。</p>
@@ -28,57 +28,57 @@
 <p>1.第一区：头皮前沿至百会穴的这一区，将这区由左到右再区分为三小块，用按摩梳从头皮前沿梳到百会穴即止，一小区块梳三下，重复三次，常梳第一区块，可预防抬头纹。</p>
 <p>2.第二、三区：左右发鬓处到上耳，这区由上到下再区分为三小块，用按摩梳从头皮边缘梳到百会穴即止，一小区块梳三下，重复三次，常梳第二、三区块，可预防鱼尾纹及眼角细纹，对老化型的黑眼圈也有帮助。</p>
 <p>3.第四、五区：左右下发际线、耳后到百会穴，这区由左到右分为三小块，用按摩梳从下发际线边缘往上梳到百会穴即止，一小区块梳三下，重复三次，常梳第四五区块，可拉提下巴线条，呈现Ｖ字脸型。</p>
-<figure id="attachment_14139597" aria-describedby="caption-attachment-14139597" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14139597-f2a2a14303c406ec3bb85712a3b4fcae.jpg"><img class="size-large wp-image-14139597" src="https://i.epochtimes.com/assets/uploads/2023/12/id14139597-f2a2a14303c406ec3bb85712a3b4fcae-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14139597" class="wp-caption-text">消除脸部水肿，就要从头皮排毒开始。<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%81%A5%E5%BA%B7%E5%85%BB%E6%88%90%E8%AE%B0.md#1">健康养成记</a>／大纪元）</figcaption></figure>
+<figure id="attachment_14139597" aria-describedby="caption-attachment-14139597" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14139597-f2a2a14303c406ec3bb85712a3b4fcae.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14139597" src="https://i.epochtimes.com/assets/uploads/2023/12/id14139597-f2a2a14303c406ec3bb85712a3b4fcae-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14139597" class="wp-caption-text">消除脸部水肿，就要从头皮排毒开始。（健康养成记／大纪元）</figcaption></figure>
 <h2><span style="color: #188638;">第二招 酵素排毒</span></h2>
-<p>消除脸部水肿，从淋巴下手也是常见手法，但通常还需要学淋巴按摩技巧。而使用酵素排毒凝胶，可以不需特别手法，透过酵素功效从皮肤排毒，帮脸<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B6%88%E6%B0%B4%E8%82%BF.md#1">消水肿</a>。</p>
+<p>消除脸部水肿，从淋巴下手也是常见手法，但通常还需要学淋巴按摩技巧。而使用酵素排毒凝胶，可以不需特别手法，透过酵素功效从皮肤排毒，帮脸消水肿。</p>
 <h3>酵素排毒的4个特点：</h3>
 <p><strong>1.分子更小：</strong>植物配方在透过酵素的生物分解后，分子更小。</p>
 <p><strong>2.易被皮肤吸收：</strong>酵素分解后产生大量氨基酸，亲肤性强，加上分子小，所以易被肌肤吸收。</p>
 <p><strong>3.净化血液：</strong>酵素能帮着排出毒素等不好的物质，净化血液及促进血液循环。</p>
 <p><strong>4.活化肌肤：</strong>血液循环好的皮肤呈现出弹性，皮肤自然呈现上提状态。</p>
-<figure id="attachment_14139598" aria-describedby="caption-attachment-14139598" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14139598-5eebf35679f48b2c09fc43b428460d99.jpg"><img class="size-large wp-image-14139598" src="https://i.epochtimes.com/assets/uploads/2023/12/id14139598-5eebf35679f48b2c09fc43b428460d99-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14139598" class="wp-caption-text">酵素帮皮肤排毒的四大机制。（健康养成记／大纪元）</figcaption></figure>
+<figure id="attachment_14139598" aria-describedby="caption-attachment-14139598" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14139598-5eebf35679f48b2c09fc43b428460d99.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14139598" src="https://i.epochtimes.com/assets/uploads/2023/12/id14139598-5eebf35679f48b2c09fc43b428460d99-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14139598" class="wp-caption-text">酵素帮皮肤排毒的四大机制。（健康养成记／大纪元）</figcaption></figure>
 <p>我使用的绿色东方排毒凝胶采用消炎的巴西落叶松茸、提升血液循环的红花与增加肌肤保湿的积雪草，并透过全身循环的淋巴系统，将排毒凝胶放在下颌两侧的淋巴结处轻轻按摩，不需任何其它手法就可以达到消除脸部水肿的功效；用排毒凝胶按摩全脸，可以让脸蛋更加柔嫩、净白。</p>
 <p>巴西落叶松茸是一种药食两用蘑菇，传统上用于调节免疫力、抗癌、抗发炎等。</p>
 <p>研究发现，红花有改善血液循环、修复缺血组织的作用。</p>
 <p>积雪草具有抗氧化活性，可以减缓皮肤衰老。体外实验显示，积雪草萃取物能够促使真皮纤维母细胞的抗氧化酶发挥作用，从而起到解毒的作用。临床实验发现，接受雷射磨皮的患者在使用积雪草凝胶后，皮肤出现的红斑较少。</p>
-<p>使用酵素排毒凝胶帮脸部排毒，除了会有颗粒产生，还可能出现三种现象。第一个是出水，代表排出脸部的水肿；第二个是出泡沫，代表身体有发炎反应；最后一个，可能会出油腻的粘稠物，则代表将身体深层不好的黏稠物质排出体外。很多人会怀疑出颗粒只是排毒凝胶单纯的去角质亮白功能，但Jojo表示，单纯去角质是不会消水肿的。</p>
+<p>使用酵素排毒凝胶帮脸部排毒，除了会有颗粒产生，还可能出现三种现象。第一个是出水，代表排出脸部的水肿；第二个是出泡沫，代表身体有发炎反应；最后一个，可能会出油腻的粘稠物，则代表将身体深层不好的黏稠物质排出体外。很多人会怀疑出颗粒只是排毒凝胶单纯的去角质亮白功能，但Jojo表示，单纯去角质是不会消水肿的。◇</p>
 <p>责任编辑：李凡</p>
 <hr>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/16/n14017689.md#1">【健康养成记】中西医六种狐臭消除法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/25/n14022233.md#1">【健康养成记】暑湿让人倦怠无食欲 中医4妙招祛湿消水肿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14057769.md#1">【健康养成记】长皱纹提早老化？这样做重训抗老除皱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105124.md#1">【健康养成记】3分钟早晨醒神操 打造修长体态</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/16/n14117381.md#1">【健康养成记】5分钟核心燃脂运动 1招让小腹变平</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/19/n14119442.md#1">【健康养成记】口疮消炎妙招 免疫力是关键</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14146874.md#1">奇妙的蓝茶 可以喝的护肤品</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/26/n14124306.md#1">51岁年龄 21岁外貌 韩国第一夫人如何冻龄？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/24/n14123234.md#1">电子产品的蓝光会使皮肤老化？ 专家这么说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/31/n14107124.md#1">亚马逊美容护肤品大促销 优惠精选</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/16/n14017689.md#1">【健康养成记】狐臭令人好尴尬 4种去除方法比一比</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/25/n14022233.md#1">【健康养成记】暑湿让人倦怠无食欲 中医4妙招祛湿消水肿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/21/n14057769.md#1">【健康养成记】长皱纹提早老化？这样做重训抗老除皱</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/29/n14105124.md#1">【健康养成记】3分钟早晨醒神操 打造修长体态</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/16/n14117381.md#1">5分钟核心燃脂运动 1招让小腹变平</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/19/n14119442.md#1">【健康养成记】口疮消炎妙招 免疫力是关键</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/9/n14326686.md#1">剪发让人焕然一新 发型师告诉你多久该剪一次发</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314654.md#1">为什么去日本旅游不要携带香水？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/6/29/n13770092.md#1">【舞蹈】王琛说舞蹈 第三集：怎么站更美丽？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/17/n14292522.md#1">减肥太快导致肌肉流失 专家透露3个迹象</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/10/n10902151.md#1" target="_blank">龙延：中共道路是魔鬼的选择</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/5/28/n11285652.md#1" target="_blank">澳洲各级政要褒奖祝贺法轮大法日</a></li><hr>
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/12/n10137177.md#1" target="_blank">沉静：切·格瓦拉——魔幻偶像（二）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/2/n11295577.md#1" target="_blank">西方法轮功学员忆师父欧洲传法 谈修炼故事</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132453.md#1">小兵错把醋当酒 一个失误成就千载美谈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14145886.md#1">【未解之谜】神机妙算刘伯温预言──烧饼歌中的天机（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/26/n14143928.md#1">昭昭天意——管窥预言中的后中共时代及未来（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/24/n14143060.md#1">【未解之谜】神机妙算刘伯温预言──烧饼歌中的天机（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/31/n14147447.md#1">英女子心脏骤停后复活 检查结果让医生震惊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/1/n14148869.md#1">【未解之谜】龙年特辑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/2/n14149368.md#1">【全球新闻】河南万人抗议包围政府 宁陵封城</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/2/n14149769.md#1">【舞蹈】王琛说舞蹈 第八集：毯子功</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/1/n14148399.md#1">繁荣的古罗马城市被发现 推翻过往认知</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146151.md#1">2024中国经济持续陷入困境的四个原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/1/n14148467.md#1">日本7.6级强震多人遇难 近10万人撤离</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/1/n14148995.md#1">冯小刚新年寄语透“话中有话” 惊呆网民</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/31/n14148073.md#1">周润发在香港街头买快餐 店员透露他点两样菜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/1/n14148359.md#1">周子瑜弹古筝贺新年 穿古装以秀丽面容搞笑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/2/n14149896.md#1">前职棒球星张志家在大陆猝逝 跨年夜细节曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/1/n14148956.md#1">泰勒丝缘何未到大巨蛋开唱 名嘴赵少康遭打脸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：每一杯都浓香四溢 咖啡机半价酬宾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14140728.md#1">毛囊好才不掉发！中医公开护发秘诀 班秃也能挽救</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">高背大办公桌椅 符合人体工学腰部支撑 限时优惠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/31/n14147796.md#1">已婚者幸福的最大威胁是什么？ 专家这么说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/1/n14148475.md#1">可防老化？ 研究：绿地越多 人体细胞越年轻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341684.md#1">贞观圣主（10）：指鸟为鸾 正诛佞人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340380.md#1">人生如戏岂堪嗟 —— 评电影《进京城》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/6/1/n2138665.md#1">善有善报，拖久了还付利息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346859.md#1">【时事金扫描】克宫出大事 乌军黑了俄国电视网</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346853.md#1">【财经非常道】美非农报告亮眼 降息降多了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343383.md#1">【全球新闻】超级飓风逼近佛州 百万人紧急撤离</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343180.md#1">三款SUV秋季或大幅涨价 含畅销车丰田RAV4</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14345122.md#1">红三代炫富：过生日奶奶给1.8亿 存款逾24亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345627.md#1">中国经济大萧条 大量实体店十一门庭冷落</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346019.md#1">投资3亿 刘德华新片《危机航线》或亏2亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345927.md#1">那英澳门开唱遇冷 “十一”说成“五一”惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345357.md#1">韩剧《冬季恋歌》电影版 明年秋天在日本上映</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346417.md#1">《派遣女医X》以电影版落幕 米仓凉子感性落泪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346747.md#1">《狮子吼》“十一”档上映 2人观影 票房79元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344945.md#1">这一物可以让水龙头闪闪发光 你可能想不到</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345615.md#1">如何去除家庭头号害虫——蟑螂？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341564.md#1">苦瓜抗癌预防脂肪肝 一类人慎食</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/28/n14145199.md#1">长者自救锻炼法 逆转骨质疏松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346990.md#1">越南餐厅推出“珍珠奶茶牛肉面” 是啥味道？</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/12/19/n14139584.htm">【健康养成记】打造紧致脸蛋消水肿 两排毒妙招</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/12/19/n14139584.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/12/19/n14139584.htm">【健康养成记】两妙招排毒消水肿 打造紧致脸蛋</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/12/19/n14139584.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
